--- a/README.Rmd
+++ b/README.Rmd
@@ -17,10 +17,50 @@ opts_chunk$set(echo = F, message = F, warning = F, fig.height = 6, fig.width = 8
                cache = F, cache.lazy = F)
 ```
 
-[`singularity` & `snakemake`](https://github.com/sylvainschmitt/snakemake_singularity) workflow to infer growth from Guyafor data.
+[`singularity` & `snakemake`](https://github.com/sylvainschmitt/snakemake_singularity) workflow to download projection data from CORDEX.
 
 ```{r dag, fig.cap="Workflow."}
 knitr::include_graphics("dag/dag.svg")
+```
+
+# Data
+
+**[CORDEX](https://cordex.org/): Cordinated Regional Climae Downscaling Experiment**
+
+*The CORDEX vision is to advance and coordinate the science and application of regional climate downscaling through global partnerships.*
+
+Data are focused here on South-America (**SAM**), but WGET scripts can be added in the `wget` folder.
+
+We particularly focused on domain **SAM-22** with following variables:
+**Near-Surface Air Temperature** (tas)
+**Near-Surface Relative Humidity** (hurs),
+**Near-Surface Wind Speed** (sfcWind),
+**Precipitation** (pr),
+**Surface Downwelling Shortwave Radiation** (rsds), &
+**Surface Upwelling Shortwave Radiation** (rsus).
+We restricted outputs at a **3hr** time-frequency and used the last available downscaling (**v1**).
+We used 3 types of experiments: one historical (**historical**) and 
+two Representative Concentration Pathway RCP 2.6 & 8.5 (**rcp26** & **rcp85**).
+We had 5 driving models available 
+(**ECMWF-ERAINT**, **MOHC-HadGEM2-ES**, **MPI-M-MPI-ESM-LR**, **MPI-M-MPI-ESM-MR**, **NCC-NorESM1-M**) 
+coupled with 2 RCM model (**REMO2015** & **RegCM4-7**).
+
+Data are retrieve from the [Institut Pierre-Simon Laplace node](https://esgf-node.ipsl.upmc.fr/search/cordex-ipsl/).
+You need first to [create an account](https://esgf.github.io/esgf-user-support/user_guide.html#create-an-account) 
+on this page ([create account](https://esgf-node.ipsl.upmc.fr/user/add/?next=http://esgf-node.ipsl.upmc.fr/search/cordex-ipsl/) link at corner right).
+
+Then you'll need to register credentials locally to use the workflow.
+A help page is available here: https://esgf.github.io/esgf-user-support/user_guide.html?highlight=credentials%20pem#access-data-with-the-command-line-via-opendap.
+In linux, you need `myproxy-logon` installed and to run this command line (with your user name):
+
+```{bash, eval=FALSE, echo=TRUE}
+myproxy-logon -sesgf-node.ipsl.upmc.fr -l {user_name} -b -T -t 72 -o ~/.esg/credentials.pem
+```
+
+To run the workflow on a cluster, you can simply copy your local credentials to the cluster.
+For instance:
+```{bash, eval=FALSE, echo=TRUE}
+cp ~/.esg/credentials.pem /my_cluster/
 ```
 
 # Installation
@@ -89,4 +129,16 @@ sbatch job_genologin.sh # run
 
 # Workflow
 
-### [download](https://github.com/sylvainschmitt/download/blob/rules/download.smk)
+### [download](https://github.com/sylvainschmitt/getCordex/blob/main/rules/download.smk)
+
+### [extract_var](https://github.com/sylvainschmitt/getCordex/blob/main/rules/extract_var.smk)
+
+* Script: [`extract_var.R`](https://github.com/sylvainschmitt/getCordex/blob/main/scripts/extract_var.R)
+
+### [join_exp](https://github.com/sylvainschmitt/getCordex/blob/main/rules/join_exp.smk)
+
+* Script: [`join_exp.R`](https://github.com/sylvainschmitt/getCordex/blob/main/scripts/join_exp.R)
+
+### Prepare for troll
+
+### Automatic report?
