getCordex 0.1.9005: extrapolate, updated plot, & new MUSE test

--- a/README.Rmd
+++ b/README.Rmd
@@ -146,6 +146,12 @@ Extract variables from the netcdf files in parallel into one tsv table per exper
 
 Join variables from the same experiment into one single tsv table.
 
+### [extrapolate](https://github.com/sylvainschmitt/getCordex/blob/main/rules/extrapolate.smk)
+
+* Script: [`extrapolate.R`](https://github.com/sylvainschmitt/getCordex/blob/main/scripts/extrapolate.R)
+
+Extrapolate variables at defined time frequency (config: `extrapolation_time_freq`, defined at 0.5hr for TROLL) with splines.
+
 ### [reformat](https://github.com/sylvainschmitt/getCordex/blob/main/rules/reformat.smk)
 
 * Script: [`reformat.R`](https://github.com/sylvainschmitt/getCordex/blob/main/scripts/reformat.R)
