getCordex 0.1.9007: fixed join and adjust_time

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ knitr::include_graphics("dag/dag.svg")
 
 # Data
 
-**[CORDEX](https://cordex.org/): Cordinated Regional Climae Downscaling Experiment**
+**[CORDEX](https://cordex.org/): Coordinated Regional Climate Downscaling Experiment**
 
 *The CORDEX vision is to advance and coordinate the science and application of regional climate downscaling through global partnerships.*
 
