getCordex 0.1.9010: - wget for NCC-NorESM1-M for all RCMs and scenari - prepared for muse

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,6 +23,7 @@ opts_chunk$set(echo = F, message = F, warning = F, fig.height = 6, fig.width = 8
 knitr::include_graphics("dag/dag.svg")
 ```
 
+
 # Data
 
 **[CORDEX](https://cordex.org/): Coordinated Regional Climate Downscaling Experiment**
@@ -41,8 +42,8 @@ We particularly focused on domain **SAM-22** with following variables:
 We restricted outputs at a **3hr** time-frequency and used the last available downscaling (**v1**).
 We used 3 types of experiments: one historical (**historical**) and 
 two Representative Concentration Pathway RCP 2.6 & 8.5 (**rcp26** & **rcp85**).
-We had 5 driving models available 
-(**ECMWF-ERAINT**, **MOHC-HadGEM2-ES**, **MPI-M-MPI-ESM-LR**, **MPI-M-MPI-ESM-MR**, **NCC-NorESM1-M**) 
+We have 3 driving models available 
+(**MOHC-HadGEM2-ES**, **MPI-M-MPI-ESM-(LR or MR)**, and, **NCC-NorESM1-M**) 
 coupled with 2 RCM model (**REMO2015** & **RegCM4-7**).
 
 Data are retrieve from the [Institut Pierre-Simon Laplace node](https://esgf-node.ipsl.upmc.fr/search/cordex-ipsl/).
@@ -125,6 +126,12 @@ sbatch job_muse.sh # run
 module load bioinfo/snakemake-5.25.0 # for test on node
 snakemake -np # dry run
 sbatch job_genologin.sh # run
+```
+
+```{bash, eval=F, echo=T}
+module load bioinfo/snakemake-5.25.0 # for test on node
+module load system/Python-3.7.4
+snakemake --report
 ```
 
 # Workflow
